--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ requires = ["uv_build>=0.8.14,<0.9.0"]
 build-backend = "uv_build"
 
 [project.scripts]
-imagez = "imagez:app"
+imagez = "imagez:cli_app"
+imagez_web = "imagez:run_web_app"
